Fixed it. Logo sorted on iOS

--- a/css/index.css
+++ b/css/index.css
@@ -279,6 +279,7 @@ a.logo {
   margin-right: 40px;
   padding-top: 4px;
   padding-bottom: 4px;
+  text-decoration: none;
 }
 #logo-mark {
   height: 38px;
